# tdd-python-otg

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
superlists/: .env.local  superlists.db
superlists/functional_tests/: functional_tests.py  tests.py
superlists/lists/: models.py  tests.py  views.py
superlists/lists/migrations/: 0001_initial.py  0002_item_text.py
superlists/lists/templates/: home.html
superlists/superlists/: settings.py  urls.py
