[tool.poetry]
name = "tdd-python-otg"
version = "0.1.0"
description = ""
authors = ["Carlos Regis <cr@carlosregis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "<4"
django = "<1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
