[tool.poetry]
name = "tdd-python-otg"
version = "0.1.0"
description = ""
authors = ["Carlos Regis <cr@carlosregis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "<3.0"
django-environ = "^0.11.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pre-commit = "^3.4.0"

[tool.poetry.group.test.dependencies]
urllib3 = "^2.0.7"
selenium = "^4.12"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
(
      docs
    | migrations
    | static/CACHE/
)
'''

[tool.ruff]
cache-dir = "~/.cache/ruff"
fix = true
target-version = "py311"
show-fixes = true
show-source = true
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C",   # flake8-comprehensions
  "E",   # pycodestyle errors
  "DJ",  # flake8-django
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PT",  # flake8-pytest-style
  "PL",  # pylint
  "Q",   # flake8-quotes
  "RUF", # ruff
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "E501",  # line too long, handled by black
]
extend-exclude = [
  "**/migrations/*",
  "**/static/CACHE/*",
  "docs",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403"]
# "path/to/file.py" = ["E402"]
# "**/{tests,docs,tools}/*" = ["E402"]

# [tool.ruff.isort]
# known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.bandit]
exclude_dirs = ["tests", "settings.py"]
# tests = ["B201", "B301"]
# skips = ["B101", "B601"]

[tool.djlint]
profile="django"

[tool.codespell]
write-changes = true
ignore-words-list = "asend"
